# prism-cli

./: .env.example  .gitignore  .prism.md  API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD.md  CLAUDE.md  CODE_REVIEW.md  CONTEXT_MANAGEMENT.md  CONTRIBUTING.md  CONVENTIONS.md  COST_LOGIC.md  DATABASE.md  DATA_MODELS.md  DEBUGGING.md  DECISIONS.md  DEPENDENCIES.md  ENVIRONMENT.md  ERROR_HANDLING.md  HANDOFF.md  KNOWN_ISSUES.md  LICENSE  LOGGING.md  MEMORY.md  PERFORMANCE.md  PERMISSIONS.md  PROGRESS.md  PROMPTS.md  PROVIDER_SPECS.md  README.md  ROUTING_LOGIC.md  SECURITY.md  TESTING.md  TOOL_SPECS.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/prism/: __init__.py  __main__.py  exceptions.py  logging_config.py
src/prism/architect/: __init__.py  display.py  executor.py  planner.py  storage.py
src/prism/auth/: __init__.py  encrypted_store.py  env_store.py  keyring_store.py  manager.py  validator.py
src/prism/cache/: __init__.py  response_cache.py
src/prism/cli/: __init__.py  app.py  compare.py  completion.py  error_handler.py  error_recovery.py  hooks.py  keybindings.py  prompt_enhancer.py  repl.py  shell_completion.py  stream_handler.py  updater.py
src/prism/config/: __init__.py  defaults.py  migration.py  schema.py  settings.py
src/prism/context/: __init__.py  branching.py  budget.py  manager.py  memory.py  repo_map.py  session.py  summarizer.py
src/prism/core/: __init__.py  logging_system.py  performance.py
src/prism/cost/: __init__.py  dashboard.py  forecast.py  pricing.py  tracker.py
src/prism/db/: __init__.py  database.py  migrations.py  models.py  queries.py
src/prism/git/: __init__.py  auto_commit.py  (+2 more)
tests/: conftest.py  test_logging_config.py
tests/test_architect/: __init__.py  conftest.py  test_display.py  test_executor.py  test_phase3_enhancements.py  test_planner.py  test_storage.py
tests/test_auth/: __init__.py  conftest.py  test_encrypted_store.py  test_env_store.py  test_keyring_store.py  test_manager.py  test_validator.py
tests/test_cache/: __init__.py  test_response_cache.py
tests/test_cli/: __init__.py  conftest.py  test_app.py  test_compare.py  test_completion.py  test_error_recovery.py  test_hooks.py  test_init_wizard.py  test_keybindings.py  test_phase4_items_11_14.py  test_phase4_repl_commands.py  test_phase5_arch_debug.py  test_phase5_cli_blame_impact.py  test_phase5_cli_context.py  test_phase5_cli_debate_why.py  test_phase5_cli_deps.py  test_phase5_cli_test_gaps.py  test_phase5_repl_aei_blame.py  test_prompt_enhancer.py  test_repl.py  test_shell_completion.py  test_stream_handler.py  test_updater.py
tests/test_config/: test_migration.py  test_settings.py
tests/test_context/: conftest.py  test_branching.py  test_budget.py  test_manager.py  test_memory.py  test_repo_map.py  test_session.py  test_summarizer.py
tests/test_core/: __init__.py  test_logging_system.py  test_performance.py
tests/test_cost/: test_dashboard.py  test_forecast.py  test_pricing.py  test_tracker.py
tests/test_db/: __init__.py  conftest.py  test_database.py  test_migrations.py  test_queries.py
tests/test_git/: conftest.py  test_auto_commit.py  test_history.py  test_operations.py  test_operations_extended.py
tests/test_integration/: conftest.py  test_budget.py  test_conversation_flow.py  test_e2e.py  test_interrupt.py  test_learning.py  test_routing_pipeline.py  test_security.py  test_tool_pipeline.py
tests/test_intelligence/: __init__.py  test_aei.py  test_archaeologist.py  test_architecture.py  test_blame.py  test_blast_radius.py  test_blast_report_format.py  test_debate.py  test_debug_memory.py  test_deps.py  test_phase5_aei_enhancements.py  test_phase5_archaeologist_enhanced.py  test_phase5_blast_enhancements.py  test_phase5_context_budget_enhanced.py  test_phase5_debate_enhanced.py  test_phase5_deps_enhanced.py  test_phase5_test_gaps_enhanced.py  test_test_gaps.py
tests/test_llm/: __init__.py  conftest.py  test_completion.py  test_health.py  test_interruption.py  test_mock.py  test_phase3_litellm.py  test_provider_config.py  test_retry.py  test_streaming.py  test_validation.py
tests/test_mcp/: test_client.py
tests/test_network/: __init__.py  conftest.py  test_connectivity.py  test_offline.py  test_privacy.py  test_proxy.py
tests/test_orchestrator/: conftest.py  test_cascade.py  test_debate.py  test_moa.py  test_swarm.py
tests/test_plugins/: test_api.py  test_manager.py
tests/test_providers/: test_registry.py
tests/test_router/: test_classifier.py  test_fallback.py  test_learning.py  test_rate_limiter.py  test_selector.py
tests/test_security/: conftest.py  test_audit.py  test_path_guard.py  test_prismignore.py  test_sandbox.py  test_secret_filter.py
tests/test_tools/: conftest.py  test_auto_test.py  test_browser.py  test_browser_interact.py  test_code_sandbox.py  test_cost_optimizer.py  test_directory.py  test_file_edit.py  test_file_read.py  test_file_write.py  test_git_tool.py  test_phase3_web.py  test_phase3_web_enhancements.py  test_quality_gate.py  test_registry.py  test_screenshot.py  test_search.py  test_task_queue.py  test_terminal.py  test_vision.py
tests/test_workspace/: __init__.py  test_manager.py
(+97 files in other folders)
