[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism-cli"
version = "0.1.0"
description = "Multi-API Intelligent Router CLI — Claude Code-level capabilities with cost-optimizing routing across every AI provider"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Prism Contributors" },
]
keywords = ["ai", "cli", "llm", "router", "coding-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "prompt-toolkit>=3.0.0,<4.0.0",
    "litellm>=1.0.0,<2.0.0",
    "keyring>=25.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "structlog>=24.0.0",
    "unidiff>=0.7.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
analysis = [
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.0",
]
web = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]
rag = [
    "chromadb>=0.5.0",
]
crypto = [
    "cryptography>=42.0.0",
]
all = [
    "prism-cli[analysis,web,rag,crypto]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
prism = "prism.cli.app:main"

[project.urls]
Homepage = "https://github.com/GoparapukethaN/prism-cli"
Repository = "https://github.com/GoparapukethaN/prism-cli"
Issues = "https://github.com/GoparapukethaN/prism-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
]
ignore = [
    "S101",    # assert used (OK in tests)
    "S603",    # subprocess without shell=True check (we handle this)
    "S607",    # partial executable path (we handle this)
    "PLR0913", # too many arguments (some functions need them)
    "PLR2004", # magic value comparison (we use named constants)
    "PLC0415", # import outside top-level (intentional lazy imports for optional deps)
    "ERA001",  # commented-out code (false positives on docstring examples)
    "SIM117",  # multiple with-statements (readability preference)
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLW1510", # subprocess.run without check (we check returncode manually)
    "E501",    # line too long (handled by formatter)
    "RUF012",  # mutable class var (we use ClassVar-like patterns intentionally)
    "S104",    # binding to all interfaces (we check 0.0.0.0 for localhost detection)
    "S112",    # try-except-continue (used in connectivity checks)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "S604", "PLR2004", "T20", "RUF003", "RUF043", "B017", "E741", "N818"]
"src/prism/cli/**/*.py" = ["B008"]  # typer.Option() in defaults is standard Typer pattern

[tool.ruff.lint.isort]
known-first-party = ["prism"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "litellm.*",
    "tree_sitter.*",
    "tree_sitter_languages.*",
    "chromadb.*",
    "keyring.*",
    "unidiff.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "security: marks security-focused tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/prism"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B104", "B105", "B112", "B310", "B311", "B404", "B602", "B603", "B604", "B607", "B608"]
